@@ -1,3 +1,9 @@
+Tue Wed 27 2006  Johan Euphrosine <johan@mekensleep.org>
+
+	* pokerui/
+	* pokerclient2d/
+	add check_warning box
+
 Tue Mar 07 2006  cedric pinson  <cpinson@freesheep.org>
 
 	* pokernetwork/pokerpackets.py:
